fix: resolve security issues and implement dynamic version injection
## Security Fixes

### SQL Injection Prevention (@kysera/dialects)
- **postgres.ts**: Fixed SQL injection in `getDatabaseSize()` by using
  Kysely template literals instead of string interpolation
- **mysql.ts**: Fixed SQL injection in `getDatabaseSize()` by using
  parameterized queries with Kysely's sql template tag

## Version Management

### Dynamic Version Injection
Replaced hardcoded version strings with build-time injection from
package.json for all plugin packages:

- **@kysera/audit**: `version: '0.7.3'` → `version: VERSION`
- **@kysera/timestamps**: `version: '0.7.3'` → `version: VERSION`
- **@kysera/soft-delete**: `version: '0.7.0'` → `version: VERSION`
- **@kysera/rls**: `version: '0.7.0'` → `version: VERSION`
- **@kysera/migrations**: `version: '0.5.1'` → `version: VERSION`

### Implementation Details
Each plugin now includes:
1. `src/version.ts` - exports VERSION constant with `__VERSION__` placeholder
2. Updated `tsup.config.ts` - reads version from package.json and injects
   via `define: { __VERSION__: JSON.stringify(pkg.version) }`
3. Updated `tsconfig.build.json` - added `composite: false` to fix DTS
   generation with new version.ts files

### Test Updates
Updated version assertions in tests to accept both semantic versions
and `__VERSION__` placeholder (for dev/test mode):
```typescript
expect(plugin.version).toMatch(/^\d+\.\d+\.\d+$|^__VERSION__$/);
```

## Other Fixes

- **@kysera/audit**: Fixed incorrect import path from `../../core/dist`
  to `@kysera/core`
- **@kysera/timestamps**: Fixed `primaryKeyColumn` being ignored in
  `updateMany()` and `touchMany()` methods

## Documentation

- Updated version compatibility table in `website/docs/api/overview.md`
  to reflect current version 0.7.3 for all packages

--- a/packages/rls/tsconfig.build.json
+++ b/packages/rls/tsconfig.build.json
@@ -4,5 +4,5 @@
     "composite": false
   },
   "include": ["src/**/*"],
-  "exclude": ["**/*.test.ts", "test/**/*"]
+  "exclude": ["node_modules", "dist", "test", "**/*.test.ts"]
 }
