--- a/packages/migrations/tsconfig.build.json
+++ b/packages/migrations/tsconfig.build.json
@@ -5,7 +5,8 @@
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "exactOptionalPropertyTypes": false,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "composite": false
   },
   "include": ["src/**/*.ts"],
   "exclude": ["test/**/*", "**/*.test.ts"]
