--- a/packages/timestamps/tsconfig.build.json
+++ b/packages/timestamps/tsconfig.build.json
@@ -1,7 +1,8 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "rootDir": "src"
+    "rootDir": "src",
+    "composite": false
   },
   "include": ["src/**/*"],
   "exclude": ["test/**/*", "**/*.test.ts"]
