--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -28,6 +28,9 @@
     "typecheck": "tsc --noEmit",
     "lint": "eslint ."
   },
+  "dependencies": {
+    "@kysera/executor": "workspace:*"
+  },
   "peerDependencies": {
     "kysely": ">=0.28.8"
   },
